# ArcaneCore

./: CMakeLists.txt  README.md
docs/doxygen/: config
src/cpp/arcanecore/base/: BaseAPI.h  BaseAPI.hpp  Exceptions.hpp  __base.hpp
src/cpp/arcanecore/base/arg/: Action.cpp  Action.hpp  DefaultHelpFlag.cpp  DefaultHelpFlag.hpp  Definition.cpp  Definition.hpp  Flag.cpp  Flag.hpp  Parser.cpp  Parser.hpp  __arg.hpp
src/cpp/arcanecore/base/clock/: ClockDefinitions.hpp  ClockOperations.cpp  ClockOperations.hpp  __clock.hpp
src/cpp/arcanecore/base/lang/: Restrictors.hpp  __lang.hpp
tests/unit/cpp/: Proto_UnitTest.cpp
